# epub2anki

./: .gitignore  AGENTS.md  README.md  autoanki.toml.example  pyproject.toml
ass/: _cleaned.txt  diary_of_a_wimpy_kid.md
autoanki/: cli.py  tts.py
