[project]
name = "epub2anki"
version = "0.1.0"
description = "From EPUB generate Anki deck via edge AI (vocabulary preheating)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "httpx>=0.28.1",
    "typer>=0.26.7",
]

[project.scripts]
epub2anki = "autoanki.cli:main"

[tool.setuptools.packages.find]
include = ["autoanki*"]
